# GESFML

./: CMakeLists.txt  README.md
include/: IntroState.h  PlayState.h
include/GESFML/: Component.h  Config.h  Entity.h  EntityComponent.h  EntityContainer.h  EntityManager.h  Game.h  SpriteComponent.h  State.h  StateAccessor.h  StateStack.h  StateTransition.h  StateUpdater.h
include/GESFML/Components/: ClickableComponent.h  CollisionComponent.h  SpriteComponent.h  TextComponent.h
src/: IntroState.cpp  PlayState.cpp  main.cpp
src/GESFML/: Entity.cpp  EntityContainer.cpp  EntityManager.cpp  Game.cpp  SpriteComponent.cpp  State.cpp  StateAccessor.cpp  StateStack.cpp  StateTransition.cpp  StateUpdater.cpp
src/GESFML/Components/: ClickableComponent.cpp  CollisionComponent.cpp  SpriteComponent.cpp  TextComponent.cpp
